--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -1,72 +1,75 @@
-<div class="tab-content-wrapper">
-    <div class="ncl-edit-version-code ncl-version">
+<div class="ncl-edit-version-code ncl-version" data-igz-extend-background>
+    <div class="igz-scrollable-container"
+         data-ng-scrollbars
+         data-ng-scrollbars-config="$ctrl.scrollConfig">
+        <div class="ncl-edit-version-code-wrapper">
+            <div class="section-wrapper code-entry-section">
+                <form name="$ctrl.versionCodeForm">
+                    <div class="code-entry-row">
+                        <div class="code-entry-col code-entry-type-col">
+                            <div class="col-label code-entry-type">Code entry type</div>
+                            <igz-default-dropdown data-values-array="$ctrl.codeEntryTypeArray"
+                                                  data-item-select-callback="$ctrl.selectEntryTypeValue(item, isItemChanged, field)"
+                                                  data-selected-item="$ctrl.selectedEntryType"
+                                                  data-on-close-dropdown="$ctrl.onCloseDropdown()"></igz-default-dropdown>
+                        </div>
+                        <div class="code-entry-col code-entry-runtime-col">
+                            <div class="col-label runtime">Runtime</div>
+                            <igz-default-dropdown data-values-array="$ctrl.runtimeArray"
+                                                  data-item-select-callback="$ctrl.selectRuntimeValue(item, isItemChanged, field)"
+                                                  data-selected-item="$ctrl.selectedRuntime"
+                                                  data-is-disabled="true"
+                                                  data-on-close-dropdown="$ctrl.onCloseDropdown()"></igz-default-dropdown>
+                        </div>
+                        <div class="code-entry-col code-entry-handler-col">
+                            <div class="col-label handler">Handler</div>
+                            <igz-validating-input-field data-field-type="input"
+                                                        data-input-name="handler"
+                                                        data-input-value="$ctrl.version.spec.handler"
+                                                        data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
+                                                        data-update-data-field="spec.handler"
+                                                        data-form-object="$ctrl.versionCodeForm"
+                                                        data-placeholder-text="Handler">
+                            </igz-validating-input-field>
+                        </div>
+                        <div class="code-entry-col code-entry-button-col"
+                             data-ng-if="$ctrl.selectedEntryType.name === 'Upload archive'">
+                            <button class="igz-button-primary upload-button">
+                                <span>UPLOAD</span>
+                                <i class="igz-icon-upload"></i>
+                            </button>
+                        </div>
+                        <div class="code-entry-col code-entry-theme-col"
+                             data-ng-if="$ctrl.selectedEntryType.name === 'Edit online'">
+                            <div class="col-label runtime">Theme</div>
+                            <igz-default-dropdown data-values-array="$ctrl.themesArray"
+                                                  data-item-select-callback="$ctrl.selectThemeValue(item, isItemChanged, field)"
+                                                  data-selected-item="$ctrl.selectedTheme"
+                                                  data-on-close-dropdown="$ctrl.onCloseDropdown()"></igz-default-dropdown>
+                        </div>
+                    </div>
+                    <div ng-if="$ctrl.selectedEntryType.name === 'S3 URL'" class="code-entry-row">
+                        <div class="code-entry-col code-entry-url-col">
+                            <div class="col-label handler">URL</div>
+                            <igz-validating-input-field data-field-type="input"
+                                                        data-input-name="url"
+                                                        data-input-value="$ctrl.URL"
+                                                        data-update-data-callback=""
+                                                        data-form-object="$ctrl.versionCodeForm"
+                                                        data-placeholder-text="Type path...">
+                            </igz-validating-input-field>
+                        </div>
+                    </div>
+                </form>
+            </div>
 
-        <div class="section-wrapper code-entry-section">
-            <form name="$ctrl.versionCodeForm">
-                <div class="code-entry-row">
-                    <div class="code-entry-col code-entry-type-col">
-                        <div class="col-label code-entry-type">Code entry type</div>
-                        <igz-default-dropdown data-values-array="$ctrl.codeEntryTypeArray"
-                                              data-item-select-callback="$ctrl.selectEntryTypeValue(item, isItemChanged, field)"
-                                              data-selected-item="$ctrl.selectedEntryType"
-                                              data-on-close-dropdown="$ctrl.onCloseDropdown()"></igz-default-dropdown>
-                    </div>
-                    <div class="code-entry-col code-entry-runtime-col">
-                        <div class="col-label runtime">Runtime</div>
-                        <igz-default-dropdown data-values-array="$ctrl.runtimeArray"
-                                              data-item-select-callback="$ctrl.selectRuntimeValue(item, isItemChanged, field)"
-                                              data-selected-item="$ctrl.selectedRuntime"
-                                              data-is-disabled="true"
-                                              data-on-close-dropdown="$ctrl.onCloseDropdown()"></igz-default-dropdown>
-                    </div>
-                    <div class="code-entry-col code-entry-handler-col">
-                        <div class="col-label handler">Handler</div>
-                        <igz-validating-input-field data-field-type="input"
-                                                    data-input-name="handler"
-                                                    data-input-value="$ctrl.version.spec.handler"
-                                                    data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
-                                                    data-update-data-field="spec.handler"
-                                                    data-form-object="$ctrl.versionCodeForm"
-                                                    data-placeholder-text="Handler">
-                        </igz-validating-input-field>
-                    </div>
-                    <div class="code-entry-col code-entry-button-col"
-                         data-ng-if="$ctrl.selectedEntryType.name === 'Upload archive'">
-                        <button class="igz-button-primary upload-button">
-                            <span>UPLOAD</span>
-                            <i class="igz-icon-upload"></i>
-                        </button>
-                    </div>
-                    <div class="code-entry-col code-entry-theme-col"
-                         data-ng-if="$ctrl.selectedEntryType.name === 'Edit online'">
-                        <div class="col-label runtime">Theme</div>
-                        <igz-default-dropdown data-values-array="$ctrl.themesArray"
-                                              data-item-select-callback="$ctrl.selectThemeValue(item, isItemChanged, field)"
-                                              data-selected-item="$ctrl.selectedTheme"
-                                              data-on-close-dropdown="$ctrl.onCloseDropdown()"></igz-default-dropdown>
-                    </div>
-                </div>
-                <div ng-if="$ctrl.selectedEntryType.name === 'S3 URL'" class="code-entry-row">
-                    <div class="code-entry-col code-entry-url-col">
-                        <div class="col-label handler">URL</div>
-                        <igz-validating-input-field data-field-type="input"
-                                                    data-input-name="url"
-                                                    data-input-value="$ctrl.URL"
-                                                    data-update-data-callback=""
-                                                    data-form-object="$ctrl.versionCodeForm"
-                                                    data-placeholder-text="Type path...">
-                        </igz-validating-input-field>
-                    </div>
-                </div>
-            </form>
-        </div>
-
-        <div data-ng-if="$ctrl.selectedEntryType.name === 'Edit online'"
-             class="code-edit-section">
-            <ncl-monaco data-function-source-code="$ctrl.version.spec.build.functionSourceCode"
-                        data-selected-theme="$ctrl.selectedTheme.id"
-                        data-language="$ctrl.selectedRuntime.language"
-                        data-on-change-source-code-callback="$ctrl.onChangeSourceCode(sourceCode)"></ncl-monaco>
+            <div data-ng-if="$ctrl.selectedEntryType.name === 'Edit online'"
+                 class="code-edit-section">
+                <ncl-monaco data-function-source-code="$ctrl.version.spec.build.functionSourceCode"
+                            data-selected-theme="$ctrl.selectedTheme.id"
+                            data-language="$ctrl.selectedRuntime.language"
+                            data-on-change-source-code-callback="$ctrl.onChangeSourceCode(sourceCode)"></ncl-monaco>
+            </div>
         </div>
     </div>
 </div>
