--- a/src/nuclio/functions/version/version-triggers/version-triggers.tpl.html
+++ b/src/nuclio/functions/version/version-triggers/version-triggers.tpl.html
@@ -1,6 +1,6 @@
 <div class="ncl-version-trigger ncl-version">
     <div class="common-table">
-        <div data-ng-if="$ctrl.triggers.length > 0" class="common-table-header header-row">
+        <div class="common-table-header header-row">
             <div class="common-table-cell header-name">
                 {{ 'common:NAME' | i18next }}
             </div>
@@ -11,12 +11,17 @@
                 {{ 'common:INFO' | i18next }}
             </div>
         </div>
+        <div class="search-input-not-found"
+             data-ng-if="$ctrl.triggers.length === 0">
+            <div class="search-message">
+                {{ 'functions:TRIGGERS_NOT_FOUND' | i18next }}
+            </div>
+        </div>
 
-        <div class="common-table-body">
+        <div class="common-table-body" data-igz-extend-background>
             <div class="igz-scrollable-container"
                  data-ng-scrollbars
-                 data-ng-scrollbars-config="$ctrl.scrollConfig"
-                 data-igz-extend-background>
+                 data-ng-scrollbars-config="$ctrl.scrollConfig">
                 <ncl-collapsing-row data-ng-repeat="trigger in $ctrl.triggers"
                                     data-item="trigger"
                                     data-type="trigger"
